envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/multisecurity/api/"
                          route:
                            cluster: multisecurity_service
                        - match:
                            prefix: "/multitrabajos-cuenta/api/"
                          route:
                            cluster: cuenta_service
                        - match:
                            prefix: "/multitrabajo-deposito/api/"
                          route:
                            cluster: deposito_service
                        - match:
                            prefix: "/multitrabajo-retiro/api/"
                          route:
                            cluster: retiro_service
                        - match:
                            prefix: "/multitrabajos-notification/api/"
                          route:
                            cluster: notification_service
                        - match:
                            prefix: "/multitrabajos-history/api/"
                          route:
                            cluster: history_service
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: multisecurity_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multisecurity_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multisecurity
                      port_value: 80
    - name: cuenta_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cuenta_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multicuenta
                      port_value: 8080
    - name: deposito_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: deposito_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multideposito
                      port_value: 80
    - name: retiro_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: retiro_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multiretiro
                      port_value: 80
    - name: notification_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: notification_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multinotification
                      port_value: 80
    - name: history_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: history_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multihistory
                      port_value: 80
